# tyy-keeperlive

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  keepliver-control.sh  keepliver.sh  main.py  pyproject.toml
keepliver/: __init__.py  auto.py  cli.py  ctyun_auto.py  ctyun_auto_selenium.py  keepalive.py  secrets.json
keepliver/html/: index.html  login.html
tests/: test_ocr_captcha.py
