[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctyun-keeplive"
version = "0.1.0"
description = "CTYUN Cloud Desktop Keepalive - Auto login and keepalive for CTYUN cloud desktop service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Patrick Lee", email = "cyhlbh2010@gmail.com" },
]
keywords = ["ctyun", "cloud-desktop", "keepalive", "selenium", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "ddddocr>=1.5.6",
    "requests>=2.32.5",
    "selenium>=4.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4.0",
]

[project.scripts]
ctyun-keeplive = "keepliver.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ctyun-keeplive"
Repository = "https://github.com/yourusername/ctyun-keeplive"
Issues = "https://github.com/yourusername/ctyun-keeplive/issues"

[tool.hatch.build.targets.wheel]
packages = ["keepliver"]

[tool.hatch.build.targets.sdist]
include = [
    "/keepliver",
    "/README.md",
    "/LICENSE",
]
exclude = [
    "/keepliver/.selenium-profile",
    "/keepliver/.selenium-profile-backup",
    "/keepliver/__pycache__",
    "/keepliver/*.png",
    "/keepliver/*.json",
    "/keepliver/*.html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
